fix: Corrige el nombre de la app en AndroidManifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:label="Calculadora Festivos"
+        android:label="Calculadora Monedero"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:appCategory="productivity">
